styles.less
@color1: #317c9c;
@color2: #1b3d4b;
@color3: #9bcbdf;

@font-face {
    font-family: 'Monda';
    font-style: normal;
    font-weight: normal;
    src: url('fonts/monda-regular-webfont.woff') format('woff');
}

@font-face {
    font-family: Ranchers;
    font-style: normal;
    font-weight: normal;
    src: url('fonts/Ranchers-Regular.ttf');
}

@font-face {
    font-family: 'Wet';
    font-style: normal;
    font-weight: normal;
    src: url('fonts/wet1_becker.ttf');
}

* {
    box-sizing: border-box;
    font-family: Monda;
    font-size: 120%;
}

.slide pre {
    border: 0;
}

.slide ul,
.slide li {
    padding: 0;
}

.centered {
    left: 50%;
    position: absolute;
    top: 50%;
}

.pull-left {
    display: inline-block;
    float: left;
}

.pull-right {
    float: right;
}

.note {
    display: none;
}

.highlight {
    background-color: #F2F5A9;
    font-size: 100%;
}

.slide pre.cli {
    background-color: #000000;
    bottom: 0;
    color: #ffffff;
    font-size: 80%;
    left: 0;
    margin: 0 inherit;
    padding: 0 2.5em;
    position: absolute;
    right: 0;
    top: 0;
}

pre.cli .notice {
    color: #89d3cc;
}

pre.cli .invert-pass {
    background-color: #63d27a;
    color: #000000;
    display: inline-block;
    width: 100%;
}

pre.cli .pass {
    color: #63d27a;
}

pre.cli .fail {
    color: #d46968;
}

pre.cli .invert-fail {
    background-color: #d46968;
    color: #000000;
}

.slide {
    border-bottom: 2em solid @color1;
    border-top: 2em solid @color3;
    margin-bottom: -2.1em;
}

.deck-status,
.slide::after {
    bottom: 0;
    font-size: 120%;
    position: fixed;
}

.deck-status {
    right: 1em;
    z-index: 9;
    -webkit-margin-before: 0;
    -webkit-margin-after: 0;
}

.slide.title::after {
    content: "";
}

.slide::after {
    content: "Phing All The Things - Omni Adams";
    left: 1em;
}

.title h1 {
    color: @color2;
    font-variant: small-caps;
}

.about-me div {
    margin-left: -15em;
    margin-top: -155px;
    width: 30em;
}

.about-me ul {
    list-style: none;
    margin-top: -.25em;
}

.lazy-development img {
    height: 18em;
    margin-left: -796px / 2;
    margin-top: -9em;
}

.dry-0 h1 span {
    color: @color1;
    font-family: Wet;
    font-size: 200%;
    letter-spacing: 4px;
    margin-top: 0;
}

.dry-1 img {
    margin-left: -300px;
    margin-top: -240px;
}

.slide.lolwut-phpunit img {
    margin-left: -533px / 2;
    margin-top: -594px / 2;
}

.slide.phpunit-vs-exec ul {
    height: 7em;
    left: 50%;
    margin-left: -6em;
    margin-top: -3.5em;
    position: absolute;
    top: 50%;
    width: 12em;
}

.slide.properties img {
    margin-left: -342px / 2;
    margin-top: -240px / 2;
}

.slide.first-things-first div {
    font-family: Ranchers;
    font-size: 400%;
    .centered;
}

.slide.first-things-first #first {
    color: @color1;
    margin-left: -180px;
    margin-top: -110px;
    -webkit-transform: rotate(-45deg);
}

.slide.first-things-first #things {
    color: @color2;
    margin-left: -100px;
    margin-top: -50px;
}

.slide.first-things-first #second {
    color: @color3;
    margin-left: 40px;
    -webkit-transform: rotate(-45deg);
}

.slide.filesets img {
    margin-left: -800px / 2;
    margin-top: -603px / 2;
    width: 800px;
}

.slide.apidoc img {
    margin-left: -1000px / 2;
    margin-top: -666px / 2;
    width: 1000px;
}

.slide.arg-value pre {
    font-size: 100%;
}

.slide.cross-streams img {
    margin-left: -500px * 0.6;
    margin-top: -480px * 0.6;
    width: 500px * 1.2;
}

.slide.dependencies-0 img {
    margin-left: -400px / 2;
    margin-top: -506px / 2;
    width: 400px;
}

.slide.dependencies-1 img {
    margin-left: -800px / 2;
    margin-top: -448px / 2;
    width: 800px;
}

